--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     flex: auto;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-evenly;
 
 
@@ -62,9 +62,7 @@ html, body{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: auto;
-    max-width: 80%;
-    max-height: 80%;
+    padding: 150px;
 
 
 }
@@ -81,25 +79,37 @@ html, body{
 
 
 .arrow {
-    background-color: black;
+    background-color: gray;
     border: none;
     cursor: pointer;
     border-radius: 50px;
 }
 
 .svg{
-    background-color: black;
-    width: 70px;
-    height: 70px;
-    color: white;
-    right: 20px;
-    top: 500px;
+
+    width: 80px;
+    height: 80px;
+
+
 }
 
+.arrowRight{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 20px;
+    transform: translateY(-240%);
+    position: relative;
 
-
+}
 .horizontalYellowLine{
     width: 100%;
     height: 1px;
     background-color: yellow;
+}
+
+.logo{
+    display: flex;
+    padding: 0px;
+    top: 10px;
 }
