--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -21,7 +21,7 @@ html, body{
 .TopButtons {
     background: black;
     color: yellow;
-    font-family: Arial, Serif;
+    font-family: Arial, serif;
     border-style: hidden;
     font-size: 25px;
     margin: 0;
@@ -177,11 +177,7 @@ html, body{
     text-transform: uppercase;
 }
 
-pre.aboutUsFontStyle
-{
-    font-family: Arial, Serif;
 
-}
 .borderStyle
 {
     border: 5px solid lightgrey;
@@ -225,26 +221,77 @@ td + td {
     /* Leichte Verzögerung hinzufügen, wenn gewünscht */
 }
 
-button.styleForButtonInAboutUs
-{
+button.styleForButtonInAboutUsLeft {
     border: 3px solid white;
-    padding: 0px;
+    padding: 0%;
     background-color: black;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 10px;
+    color: black;
+    animation: slideInFromLeft 3s forwards;
+    transition: color 3s, border 3s;
+    margin-left: 20%;
+
 }
+
+
+
+
+button.styleForButtonInAboutUsLeft:hover, button.styleForButtonInAboutUsRight:hover {
+    color: white;
+    border: 4px solid yellow;
+}
+
+
 
 img.styleForImageInAboutUs
 {
-    padding: 0px;
-    margin: 0px;
-    width: 150px;
+    padding: 0%;
+    margin: 0%;
+    width: 100%;
     overflow: auto;
+    animation: slideInFromLeft 3s forwards;
 }
 
-div.styleForDivInAboutUs
+
+
+pre.styleForPreInAboutUs {
+
+    margin: 0%;
+    font-size: 100%;
+
+    font-family: Arial, serif;
+    width: 100%;
+    padding-bottom: 3%;
+    padding-top: 3%;
+    animation: slideInFromLeft 3s forwards;
+    color: white;
+    font-family: Arial, serif;
+}
+
+
+
+
+table#tableInAboutUs
 {
-    padding: 0px;
-    margin: 0px;
+    table-layout: fixed;
+    width: 100%;
 }
 
+
+td.styleForTdInAboutUsLeftPicture
+{
+
+    text-align: left;
+
+}
+
+td.styleForTdInAboutUsRightText
+{
+
+    text-align: left;
+
+}
 
 
