--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -319,5 +319,21 @@ td.styleForTdInAboutUsRightText
     width: 100%;
 }
 
+#titleNutrition
+{
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    padding-top: 3%
+
+}
+
+#titleNutritionText
+{
+ text-align: center;
+    font-family: Arial, Serif;
+    font-size:2rem;
+}
+
 
 
