--- a/fitness-and-health-website/stylesheetAboutUs.css
+++ b/fitness-and-health-website/stylesheetAboutUs.css
@@ -1,113 +1,139 @@
-.listObjectsAboutUs{
-    font-size: 20px;
-    color: yellow;
-    font-weight: bold;
+h2.headersInAboutUs
+{
     font-family: Arial, serif;
-}
-
-.logoInAboutUs{
-    float: right;
-
-    padding: 10em;
-
-}
-
-
-
-.headersInAboutUs{
-    text-align: center;
-    color: yellow;
-    font-family: "Colonna MT", serif;
     font-size: 50px;
-    font-weight: bold;
-    background-color: black;
-    margin-top: 0px;
-    margin-bottom: 50px;
+    color: yellow;
+    text-align: center;
 }
 
-
-button.styleForButtonInAboutUsLeft {
-    border: 3px solid white;
-    padding: 0%;
-    background-color: black;
+img.styleForImgInAboutUs
+{
     width: 100%;
-    overflow: hidden;
-    border-radius: 10px;
-    color: black;
-    animation: slideInFromLeft 3s forwards;
-    transition: color 3s, border 3s;
-    margin-left: 20%;
+    background-color: black;
+    padding: 0;
+    margin: 0;
+}
+
+.homeButton-wrapper {
+    width: 20px;  /* Erhöhe die Breite des Buttons */
+    height: 20px; /* Erhöhe die Höhe des Buttons */
+    display: inline-block;
+    position: relative;
+}
+
+.homeButton {
+    background-image: url("icones/iconizer-bxs-home.svg");
+    padding: 20px; /* Erhöhe das Padding für einen größeren Button */
+    margin: 10px;  /* Behalte einen kleineren Abstand nach außen */
+    background-repeat: no-repeat;
+    background-color: black;
+    border-style: hidden;
+    background-size: contain; /* Bild wird skaliert, um in den Button zu passen */
 
 }
+
+.homeButton:hover {
+    transition: background-color 0.75s ease, color 1s ease;
+    background-image: url("icones/bxs-home.svg");
+    background-color: yellow;
+    background-repeat: no-repeat;
+}
+
+button.styleForButtonInAboutUsLeft
+{
+    background-color: black;
+    padding: 0px;
+    margin: 0px;
+    border: 3px solid white;
+    border-radius: 10px;
+    transition: 3s border;
+
+    animation: slideInFromRight 5s forwards;
+}
+
 
 button.styleForButtonInAboutUsRight
 {
-    border: 3px solid white;
-    padding: 0%;
     background-color: black;
-    width: 100%;
-    overflow: hidden;
+    padding: 0px;
+    margin: 0px;
+    border: 3px solid white;
     border-radius: 10px;
-    color: black;
-    animation: slideInFromLeft 3s forwards;
-    transition: color 3s, border 3s;
-    margin-right: 20%;
+    transition: 3s border;
+
+    animation: slideInFromLeft 5s forwards;
 }
-
-
-button.styleForButtonInAboutUsLeft:hover, button.styleForButtonInAboutUsRight:hover {
-    color: white;
-    border: 4px solid yellow;
-}
-
-
-
-img.styleForImageInAboutUs
+button.styleForButtonInAboutUsLeft:hover, button.styleForButtonInAboutUsRight:hover
 {
-    padding: 0%;
-    margin: 0%;
-    width: 100%;
-    overflow: auto;
-    animation: slideInFromLeft 3s forwards;
+    border: 3px solid yellow;
 }
 
-
-
-pre.styleForPreInAboutUs {
-
-    margin: 0%;
-    font-size: 100%;
-
-    font-family: Arial, serif;
-    width: 100%;
-    padding-bottom: 3%;
-    padding-top: 3%;
-    animation: slideInFromLeft 3s forwards;
+p.styleForPInAboutUs
+{
     color: white;
     font-family: Arial, serif;
+    font-size: medium;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    margin: 0;
+
+
 }
 
-
-
-
-table#tableInAboutUs
+table.tableStyleInAboutUs
 {
-    table-layout: fixed;
-    width: 100%;
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 90%;
+
 }
-
-
-td.styleForTdInAboutUsLeftPicture
+p.styleForPInAboutUsWritingTextLeft
 {
-
+    color: white;
+    font-family: Arial, serif;
+    font-size: larger;
+    padding-left: 5%;
     text-align: left;
-
+    animation: slideInFromRight 5s forwards;
 }
 
-td.styleForTdInAboutUsRightText
+
+p.styleForPInAboutUsWritingTextRight
 {
+    color: white;
+    font-family: Arial, serif;
+    font-size: larger;
+    padding-right: 5%;
+    text-align: right;
+    animation: slideInFromLeft 5s forwards;
+}
 
-    text-align: left;
+td.heightAndWidthForTdInAboutUs
+{
+    width: 15%;
+}
 
 
+
+@keyframes slideInFromRight {
+    from {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+
+@keyframes slideInFromLeft {
+    from {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
