--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -41,7 +41,6 @@ html, body{
 }
 
 
-
 .vertikalLine{
     width: 3px;
     height: 100%;
@@ -105,6 +104,7 @@ html, body{
     overflow: hidden;
     height: 20vh;
     width: 100%;
+    font-family: Arial, sans-serif;
 }
 
 .headLine {
