--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -45,3 +45,33 @@ h1.styleForHeader
 
 }
 
+.shop-items{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.item1{
+    padding: 3%;
+    border: 4px solid whitesmoke;
+    border-radius: 20%;
+    width: 10%;
+    height: 5%;
+
+
+}
+
+.item2{
+    padding: 3%;
+    border: 4px solid whitesmoke;
+    border-radius: 20%;
+    width: 10%;
+    height: 5%;
+
+}
+/*.search{
+    border-radius: 20%;
+    width: 10%;
+    height: 2%;
+    border: 10px solid white;
+    background-color: black;
+}*/
