--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -325,14 +325,13 @@ html, body{
     opacity: 0.8;
 
     transition: transform 1s ease, box-shadow 1s ease, border-radius 1s ease;
-    box-shadow: 0 4px 15px black/* Sanfter Schatten */
+    box-shadow: 0 4px 15px black;
 }
 
 .pictureOfMan:hover{
     transform: scale(1.1);
 }
 .h2onSite{
-
     margin-bottom: 1%;
     font-family: Georgia;
     font-size: 2rem;
@@ -340,7 +339,8 @@ html, body{
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .h2onSite:hover {
-    color: red;
+    color: yellow;
+    font-size: 2.2rem;
 }
 .textContent{
     display: flex;
@@ -348,11 +348,18 @@ html, body{
     margin-top: 23%;
     border: 1px solid black;
     margin-left: 5%;
+    padding: 1%;
+    background-color: darkgray;
+    border-radius: 20px;
+    overflow: visible;
+    word-wrap: break-word;
+    animation: fadeIn 3s ease;
+
 }
 .h2Box{
     display: inline-block;
     padding: 2%;
-    padding-top: 0%;
+
 }
 @keyframes occor {
     0%{
@@ -361,6 +368,15 @@ html, body{
     100% {
         opacity: 1;
     }
+}
+.textForWebsite{
+    font-size: 150%;
+    margin: 0;
+    line-height: 1.5;
+}
+@keyframes fadeIn {
+    0% { opacity: 0; transform: translateY(50px); }
+    100% { opacity: 1; transform: translateY(0); }
 }
 
 
