--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -312,55 +312,28 @@ html, body{
 
 .pictureContainer{
     display: flex;
-    justify-content: left;
-
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    position: relative;
     animation: occor 3s linear;
-
 }
 .pictureOfMan{
     margin-top: 20%;
-    width: 45%;
-    left: 50%;
-    border-radius: 30% 70% 70% 30% / 30% 22% 78% 70%;
-    opacity: 0.8;
+    max-width: 150%;
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    opacity: 0.7;
 
-    transition: transform 1s ease, box-shadow 1s ease, border-radius 1s ease;
-    box-shadow: 0 4px 15px black;
-}
-
-.pictureOfMan:hover{
-    transform: scale(1.1);
 }
 .h2onSite{
-    margin-bottom: 1%;
-    font-family: Georgia;
-    font-size: 2rem;
-    font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-.h2onSite:hover {
-    color: yellow;
-    font-size: 2.2rem;
-}
-.textContent{
-    display: flex;
-    flex-direction: column;
-    margin-top: 23%;
-    border: 1px solid black;
-    margin-left: 5%;
-    padding: 1%;
-    background-color: darkgray;
-    border-radius: 20px;
-    overflow: visible;
-    word-wrap: break-word;
-    animation: fadeIn 3s ease;
+    position: absolute;
+    top: 20%;
+    font-size: 200%;
 
 }
-.h2Box{
-    display: inline-block;
-    padding: 2%;
 
-}
 @keyframes occor {
     0%{
         opacity: 0;
@@ -368,15 +341,6 @@ html, body{
     100% {
         opacity: 1;
     }
-}
-.textForWebsite{
-    font-size: 150%;
-    margin: 0;
-    line-height: 1.5;
-}
-@keyframes fadeIn {
-    0% { opacity: 0; transform: translateY(50px); }
-    100% { opacity: 1; transform: translateY(0); }
 }
 
 
