--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -349,7 +349,7 @@ table#tableInMain
 {
     background-color: black;
     width: 100%;
-
+    margin-top: 10%;
 }
 p#\@InTableInMain
 {
@@ -405,4 +405,74 @@ a.styleForEmailInMain:hover
 {
     color: white;
     animation: 3s changeColorAndSize infinite;
+}
+
+
+.pictureContainer{
+    display: flex;
+    justify-content: left;
+
+    animation: occor 3s linear;
+
+}
+.pictureOfMan{
+    margin-top: 20%;
+    width: 45%;
+    left: 50%;
+    border-radius: 30% 70% 70% 30% / 30% 22% 78% 70%;
+    opacity: 0.8;
+
+    transition: transform 1s ease, box-shadow 1s ease, border-radius 1s ease;
+    box-shadow: 0 4px 15px black;
+}
+
+.pictureOfMan:hover{
+    transform: scale(1.1);
+}
+.h2onSite{
+    margin-bottom: 1%;
+    font-family: Georgia;
+    font-size: 2rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.h2onSite:hover {
+    color: yellow;
+    font-size: 2.2rem;
+}
+.textContent{
+    display: flex;
+    flex-direction: column;
+    margin-top: 23%;
+    border: 1px solid black;
+    margin-left: 5%;
+    padding: 1%;
+    background-color: darkgray;
+    border-radius: 20px;
+    overflow: visible;
+    word-wrap: break-word;
+    animation: fadeIn 3s ease;
+
+}
+.h2Box{
+    display: inline-block;
+    padding: 2%;
+
+}
+@keyframes occor {
+    0%{
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.textForWebsite{
+    font-size: 150%;
+    margin: 0;
+    line-height: 1.5;
+}
+@keyframes fadeIn {
+    0% { opacity: 0; transform: translateY(50px); }
+    100% { opacity: 1; transform: translateY(0)}
 }
