--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -22,9 +22,15 @@
     background-color: yellow;
     background-repeat: no-repeat;
 }
+.top{
 
+
+
+
+}
 h1.styleForHeader
 {
+
     color: yellow;
     text-align: center;
     font-size: 75px;
@@ -68,10 +74,12 @@ h1.styleForHeader
     height: 5%;
 
 }
-/*.search{
-    border-radius: 20%;
-    width: 10%;
-    height: 2%;
-    border: 10px solid white;
-    background-color: black;
-}*/
+#searchButton{
+    border-radius: 20px;
+}
+#searchInput{
+    border-radius: 20px;
+}
+.search{
+    left: 90%;
+}
