--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -24,13 +24,16 @@
 }
 .top{
 
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 
 
 }
 h1.styleForHeader
 {
-
+    flex-grow: 1;
     color: yellow;
     text-align: center;
     font-size: 75px;
@@ -53,13 +56,12 @@ h1.styleForHeader
 
 .shop-items{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 .item1{
     padding: 3%;
     border: 4px solid whitesmoke;
-    border-radius: 20%;
     width: 10%;
     height: 5%;
 
@@ -69,10 +71,17 @@ h1.styleForHeader
 .item2{
     padding: 3%;
     border: 4px solid whitesmoke;
-    border-radius: 20%;
+
     width: 10%;
     height: 5%;
 
+}
+.item3{
+    padding: 3%;
+    border: 4px solid whitesmoke;
+
+    width: 10%;
+    height: 5%;
 }
 #searchButton{
     border-radius: 20px;
