--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -120,7 +120,7 @@ html, body{
 
     top: 10%;
     text-align: center;
-    color: black;
+    color: yellow;
     text-shadow: 2px 2px 5px rgba(204, 153, 0, 0.8);
     text-transform: uppercase;
     font-size: 300%;
