--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -401,8 +401,6 @@ a.styleForEmailInMain:hover
 
 .pictureContainer{
     display: flex;
-    justify-content: left;
-
     animation: occor 3s linear;
 
 }
@@ -425,11 +423,11 @@ a.styleForEmailInMain:hover
     font-family: Georgia;
     font-size: 2rem;
     font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 4px black;
 }
 .h2onSite:hover {
     color: yellow;
-    font-size: 2.2rem;
+    font-size: 2.01rem;
 }
 .textContent{
     display: flex;
@@ -465,6 +463,6 @@ a.styleForEmailInMain:hover
     line-height: 1.5;
 }
 @keyframes fadeIn {
-    0% { opacity: 0; transform: translateY(50px); }
+    0% { opacity: 0; transform: translateY(50%); }
     100% { opacity: 1; transform: translateY(0)}
 }
