--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -1,3 +1,129 @@
+.Top {
+
+    background: black;
+    background-size: auto;
+    text-align: justify-all;
+    margin: 0;
+    padding: 0;
+    flex-direction: row;
+    flex: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+html, body{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    background-color: #121212;
+}
+.index{
+
+    background-size: cover;
+}
+
+
+.TopButtons {
+    background: black;
+    color: yellow;
+    font-family: Arial, serif;
+    border-style: hidden;
+    font-size: 25px;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    background-image: linear-gradient(to right, yellow 50%, black 50%); /* Gradient von Gelb zu Schwarz */
+    background-size: 200% 100%; /* Vergrößert das Hintergrundbild für die Animation */
+    background-position: right bottom; /* Startet den Hintergrund ganz rechts */
+    transition: background-position 0.75s ease, color 1s ease; /* Übergang der Hintergrundposition */
+}
+
+.TopButtons:hover {
+    background-position: left bottom; /* Bewegt den Farbverlauf nach links */
+    color: black; /* Ändert die Textfarbe auf Schwarz */
+
+}
+
+
+.vertikalLine{
+    width: 3px;
+    height: 100%;
+    margin: 0px 10px;
+    background-color: yellow;
+
+}
+.container{
+    display: flex;
+    align-items: center;
+    height: 50px;
+
+}
+.MainPage.picture{
+    max-width: 100%;
+
+}
+.images{
+
+    padding: 150px;
+    position: relative;
+    overflow: hidden;
+
+
+}
+.MainPage{
+    display: flex;
+    flex-direction: column;
+
+}
+
+.headersTop{
+    color: yellow;
+    font-weight: bold;
+    font-family: Arial, serif;
+    font-style: normal;
+    text-decoration: underline;
+    font-size: 50px;
+}
+
+
+
+.horizontalYellowLine{
+    width: 100%;
+    height: 1px;
+    background-color: yellow;
+}
+
+.logo{
+    display: flex;
+    padding: 0px;
+    top: 10px;
+}
+
+
+
+#headlinetrans{
+    position: relative;
+    overflow: hidden;
+    height: 20vh;
+    width: 100%;
+    font-family: Arial, sans-serif;
+}
+
+.headLine {
+
+    top: 10%;
+    text-align: center;
+    color: yellow;
+    text-shadow: 2px 2px 5px rgba(204, 153, 0, 0.8);
+    text-transform: uppercase;
+    font-size: 300%;
+    font-weight: bold;
+
+<!--animation: flyIn 2s ease-out forwards;-->
+}
+
+
+
 .homeButton-wrapper {
     width: 20px;  /* Erhöhe die Breite des Buttons */
     height: 20px; /* Erhöhe die Höhe des Buttons */
@@ -51,58 +177,10 @@ h1.styleForHeader
     }
 
 }
-.container{
-    display: flex;
-    align-items: center;
-    height: 50px;
 
-}
 
-.vertikalLine{
-    width: 3px;
-    height: 100%;
-    margin: 0px 10px;
-    background-color: yellow;
 
-}
-.TopButtons{
-    background: black;
-    color: yellow;
-    font-family: Arial, serif;
-    border-style: hidden;
-    font-size: 25px;
-    margin: 0;
-    padding: 0;
-    cursor: pointer;
-    background-image: linear-gradient(to right, yellow 50%, black 50%); /* Gradient von Gelb zu Schwarz */
-    background-size: 200% 100%; /* Vergrößert das Hintergrundbild für die Animation */
-    background-position: right bottom; /* Startet den Hintergrund ganz rechts */
-    transition: background-position 0.75s ease, color 1s ease; /* Übergang der Hintergrundposition */
-}
 
-.TopButtons:hover {
-    background-position: left bottom; /* Bewegt den Farbverlauf nach links */
-    color: black; /* Ändert die Textfarbe auf Schwarz */
-
-}
-.Top{
-
-    background: black;
-    background-size: auto;
-    text-align: justify-all;
-    margin: 0;
-    padding: 0;
-    flex-direction: row;
-    flex: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-.logo{
-    display: flex;
-    padding: 0px;
-    top: 10px;
-}
 .shop-items{
     display: flex;
     justify-content: space-evenly;
