inserted bootstrap to shop, fixed the bugs

--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -52,7 +52,7 @@ html, body{
     background-color: yellow;
 
 }
-.container{
+.custom-container{
     display: flex;
     align-items: center;
     height: 50px;
