Try to make the transition of the sidebar cleaner part 2

--- a/fitness-and-health-website/stylesheet-training-plans.css
+++ b/fitness-and-health-website/stylesheet-training-plans.css
@@ -7,7 +7,7 @@ body {
 }
 
 .toFixflex{
-
+    justify-items: left;
 }
 .homeButton-wrapper:hover .sidebar {
     transform: translateX(90%); /* Slide the sidebar into view */
@@ -23,9 +23,8 @@ body {
     background-size: contain;
 }
 .picture{
-    width: 50%;
+    width: 50%; !important;
     height: auto;
-    display: block;
     margin-bottom: 20px;
 }
 
