added icons to the sidebar

--- a/fitness-and-health-website/stylesheet-training-plans.css
+++ b/fitness-and-health-website/stylesheet-training-plans.css
@@ -12,6 +12,10 @@ body {
 .homeButton-wrapper:hover .sidebar {
     transform: translateX(90%); /* Slide the sidebar into view */
 }
+.nav-link .icon {
+    width: 20%;
+    height: auto;
+}
 .homeButton {
     padding: 20px;
     width: 20%;
@@ -23,15 +27,22 @@ body {
     background-size: contain;
 }
 .picture{
-    width: 50%; !important;
+    width: 70%; !important;
     height: auto;
     margin-bottom: 20px;
+}
+
+.nav-link:hover{
+    transition: background-color 0.75s ease, color 1s ease;
+
+    background-color: darkgray;
+    background-repeat: no-repeat;
 }
 
 .sidebar {
     position: fixed;
     top: 0;
-    background-color: black;
+    background-color: #1E1E1E;
     left: -250px;
     width: 250px;
     height: 100%;
