--- a/fitness-and-health-website/stylesheet-training-plans.css
+++ b/fitness-and-health-website/stylesheet-training-plans.css
@@ -24,10 +24,19 @@ body {
     width: 20%;
     height: 20%;
     margin: 10px;
+    background-image: url("icones/iconizer-bxs-home.svg");
     background-repeat: no-repeat;
     background-color: black;
     border-style: hidden;
     background-size: contain;
+
+
+.homeButton-wrapper {
+        width: 20px;  /* Erhöhe die Breite des Buttons */
+        height: 20px; /* Erhöhe die Höhe des Buttons */
+        display: inline-block;
+        position: relative;
+}
 }
 .picture{
     width: 70%; !important;
@@ -177,6 +186,7 @@ a.text-in-sidebar
 
 a.text-in-sidebar:hover
 {
+    background-color: black;
     color: yellow;
 }
 
